Updated configuration example and included non-manual composition step

--- a/configuration.example
+++ b/configuration.example
@@ -1,15 +1,26 @@
 #!/bin/bash
 
 
+###
+### Basic Configuration
+###
+
+
 ##
 ## Composition
 ##
 
 # Domain
+#	Also used during deployment to configure the reverse proxy
 DOMAIN="dlubm.ddns.me"
 
-# Networks
-NETWORK_REVERSE_PROXY="reverse_proxy"
+# DLUBM
+GRANULARITY="DEPARTMENT"
+SEED=0
+UNIVERSITY_OFFSET=0
+UNIVERSITY_AMOUNT=5
+UNIVERSITY_LIMIT=1
+DEPARTMENT_LIMIT=1
 
 
 ##
@@ -19,11 +30,9 @@ NETWORK_REVERSE_PROXY="reverse_proxy"
 # Region
 REGION="eu-central-1"
 
-# Security group
-SECURITY_GROUP_NAME="dlubm-ldfu-eval"
-SECURITY_GROUP_DESCRIPTION="DLUBM LD-Fu Evaluation"
-
 # Instance amounts
+#	In addition, one evluation instance
+#	Maximum of 20 running instances for accounts without limit increase
 INSTANCE_AMOUNT_SWARM_MANAGER="1"
 INSTANCE_AMOUNT_SWARM_WORKER="18"
 
@@ -36,6 +45,41 @@ INSTANCE_AMOUNT_SWARM_WORKER="18"
 INSTANCE_TYPE_SWARM_MANAGER="t2.small"
 INSTANCE_TYPE_SWARM_WORKER="t2.small"
 INSTANCE_TYPE_EVALUATION="m4.xlarge"
+
+
+
+
+###
+### Advanced Configuration
+###
+
+
+##
+## Composition (advanced)
+##
+
+# Images
+IMAGE_ONTOLOGY="fekepp/dlubm:latest"
+IMAGE_GLOBAL="fekepp/dlubm:latest"
+IMAGE_UNIVERSITY="fekepp/dlubm:latest"
+IMAGE_DEPARTMENT="fekepp/dlubm:latest"
+
+# Domain
+DOMAIN_GLOBAL="true"
+DOMAIN_DETAILED="false"
+
+# Networks
+#	Also used during deployment to configure the reverse proxy
+NETWORK_REVERSE_PROXY="reverse_proxy"
+
+
+##
+## Deployment (advanced)
+##
+
+# Security group
+SECURITY_GROUP_NAME="dlubm-ldfu-eval"
+SECURITY_GROUP_DESCRIPTION="DLUBM LD-Fu Evaluation"
 
 # Instance names
 INSTANCE_NAME_PREFIX_SWARM_MANAGER="dlubm-swarm-manager-"
